Fixed the errors that were in my previous commit
Fixed the errors that were in my previous commit

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -118,6 +118,22 @@ body {
     background-color: #6e6a86;
 }
 
+.Edit {
+    background-color: #6e6a86;
+}
+
+.Edit:hover {
+    background-color: #9ccfd8;
+}
+
+.Close {
+    background-color: #6e6a86;
+}
+
+.Close:hover {
+    background-color: #393552;
+}
+
 .Profile {
     font-family: 'Open Sans', sans-serif;
 }
